Se implementan los métodos para aceptar o rechazar una amistad Se refactoriza el método para obtener una amistad por el id, securizándolo para evitar accesos por usuarios no pertenecientes a la relación Se trabaja en mappers, services, y repositories, refactorizando, eliminando cosas que no se usan y creando métodos necesarios Se trabaja en tema alertas de solicitudes de amistad, cambiando sus estados una vez se ha realizado una acción sobre la solicitud Se trabaja también en las alertas de actividades, pero se encuentra problema al intentar recuperar las entities ActividadEntity, porque no mapea los alumnos del curso, aún usando el JOIN FETCH